Added cookies to check if user is Admin and save that information, not the safest since user can change their own cookies, but works for now, changed display:none to use a nodisplay class instead so code is formatted the same everywhere, currently an issue with change password not working, so pushing to check what i even changed that could break it, TODO Add password safe check on change password function too, function for main admin (user with id 1) to be able to add workers and other admins

--- a/html/Appointment.html
+++ b/html/Appointment.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="customAppointmentAlert" class="custom-alert">
+    <div id="customAppointmentAlert" class="custom-alert nodisplay">
         <h2>Appointment registered successfully</h2>
     </div>
     <div class="container">
