--- a/html/header.html
+++ b/html/header.html
@@ -79,10 +79,10 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item" id="estimatorButton" style="display: none;">
+                    <li class="nav-item nodisplay" id="estimatorButton" >
                         <a class="nav-link h3 mr-2 text-light" href="Estimator.html">Price Estimator</a>
                     </li>
-                    <li class="nav-item" id="timeTableButton" style="display: none;">
+                    <li class="nav-item nodisplay" id="timeTableButton" >
                         <a class="nav-link h3 mr-2 text-light" href="Appointment.html"> Make Appointment</a>
                     </li>   
                 </ul>
@@ -90,7 +90,7 @@
                     <li class="nav-item" id="LoginButton" >
                         <a class="nav-link h3   mr-2 text-light" href="Login.html">Login</a>
                     </li>
-                    <li class="nav-item dropdown  dropdown-hover" id="LogOutButton" style="display:none">
+                    <li class="nav-item dropdown  dropdown-hover nodisplay" id="LogOutButton" >
                         <a class="nav-link h3 mr-2 text-light dropdown-toggle" href="#" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Profile
                         </a>
@@ -98,7 +98,7 @@
                             <a class=" dropdown-item text-white" href="Profile.html">Account Info</a>
                             <a class=" bg-gray dropdown-item text-white " href="Deals.html">Special Deals</a>
                             <a class=" bg-gray dropdown-item text-white " href="Settings.html">Settings</a>
-                            <a class=" bg-gray dropdown-item text-white " href="Admin.html">Admin settings</a>
+                            <a id="AdminMenu"class=" bg-gray dropdown-item text-white nodisplay " href="Admin.html">Admin settings</a>
                             <div class="bg-gray" style="height:20px"><div class=" custom-divider"></div></div>
                             <a class=" bg-gray dropdown-item-logout text-red " style="cursor: pointer;" onclick="LogOut()">Log Out</a>
                         </div>
@@ -112,7 +112,7 @@
         </nav>
         
 </div>
-<div id="scroll-to-top-btn" style="display:none; z-index:1000;" onclick="scrollToTop()">↑</div>
+<div id="scroll-to-top-btn"  style="z-index:1000; display:none" onclick="scrollToTop()">↑</div>
 </body>
 <script>
     document.getElementById('LoggedSuccess').textcontent = LoggeInUser;
