Wrote down future additions, what i need to do, first thing i wanna do is remove any .get and .delete and change them to .post so i can in any of them check if the currently logged in user is actually an admin, if so then let them see the database info and edit it, if not then block those actions

--- a/html/Profile.html
+++ b/html/Profile.html
@@ -135,6 +135,12 @@
       document.getElementById('NoMatchPassword').classList.remove('nodisplay');
       return
     }
+    console.log(JSON.stringify({
+            currentPassword: currentPassword,
+            newPassword: newPassword,
+            UUID: loggedUserUUID
+        }));
+
     // Communication with API to change password
     fetch(window.location.origin + '/change-password', {
         method: 'POST',
