Fixed all the issues with getCookies() not working since i changed how cookies get stored, now all the functionality is restored, last thing im thinking of adding is a worker page where they can see the current active appointments (should probably replace the Make Appointment thing with it since workers wouldnt be using their work account to make appointments anyways)

--- a/html/Appointment.html
+++ b/html/Appointment.html
@@ -71,7 +71,8 @@
     let selectedDateTime = null; // Variable to store the selected datetime
     let selectedDate = null; // Variable to store the selected date
     let user = null;
-    const loggedUserUUID = getCookie("LoggedUser")
+    const loggedUser = JSON.parse(getCookie("userData"));
+    console.log("Logged: ",loggedUser);
     document.getElementById('appointmentForm').addEventListener('submit', function(event) {
         event.preventDefault(); // Prevent default form submission
         // Retrieve form data
@@ -83,7 +84,7 @@
             'Content-Type': 'application/json',
           },
           body: JSON.stringify({
-            UUID: loggedUserUUID
+            UUID: loggedUser.UUID
         }),
         })
         .then(response => response.json())
