--- a/html/header.html
+++ b/html/header.html
@@ -85,6 +85,9 @@
                     <li class="nav-item nodisplay" id="timeTableButton" >
                         <a class="nav-link h3 mr-2 text-light" href="Appointment.html"> Make Appointment</a>
                     </li>   
+                    <li class="nav-item nodisplay" id="workerButton" >
+                        <a class="nav-link h3 mr-2 text-light" href="WorkerPage.html"> Check Appointments</a>
+                    </li>   
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item" id="LoginButton" >
