So project is due soon, finished up most of the worker view for projects, they can view projecs that are due today so no projects get forgotten, projects that are delayed currently and all active projects, obviously removed the option to delete projects and such from worker panel, since thats just for admin (can change if needed), in addition made another view for admins to see ALL projects too since before you could only see active ones, todo would be to change the functions to always check if the thing were removing the nodisplay class exsists, since that breaks the worker view, other than that ofc still checking in backend if the logged in user is an admin but thats alot of work.

--- a/html/Admin.html
+++ b/html/Admin.html
@@ -48,6 +48,10 @@
                     <button class="btn btn-outline-secondary m-auto text-white mt-2 "  style="width:200px" onclick="viewDelayedProjects()">View delayed projects</button>
                     <button class="btn btn-outline-secondary m-auto text-white mt-2 "  style="width:200px" onclick="viewActiveProjects()">View active projects</button>
                 </div>
+                
+            </div>
+            <div class="m-auto">
+            <button class="btn btn-outline-secondary  text-white mt-2 "  style="width:200px" onclick="viewAllProjects()">View all projects</button>
             </div>
         </div>
         
