--- a/html/WorkerPage.html
+++ b/html/WorkerPage.html
@@ -23,8 +23,9 @@
             <h2 class="card-title text-center">Worker panel</h2>
             <div class="card-text row ml-2">
                 <div class="row mt-3 ml-5 mr-1 ">
-                    <button class="btn btn-outline-secondary text-white ml-5 mb-4"  style="width:200px" onclick="WorkerviewTodaysProjects()">View Todays projects</button>
-                    <button class="btn btn-outline-secondary text-white ml-5 mb-4"  style="width:200px" onclick="WorkerviewActiveProjects()">View active projects</button>
+                    <button class="btn btn-outline-secondary text-white ml-5 mb-4"  style="width:200px" onclick="WorkerviewTodaysProjects()">View projects to be finished today</button>
+                    <button class="btn btn-outline-secondary text-white ml-5 mb-4"  style="width:200px" onclick="WorkerviewDelayedProjects()">View delayed projects</button>
+                    <button class="btn btn-outline-secondary text-white ml-5 mb-4"  style="width:200px" onclick="WorkerviewActiveProjects()">View all active projects</button>
                 </div>
             </div>
         </div>
