Added database code, so now anyone can download the project, then run the database file to create the database, connect the two and the project can function on any computer, also added statistics page for admins, TODO is finish the statistics page since currenty it only has buttons that do nothing

--- a/html/Appointment.html
+++ b/html/Appointment.html
@@ -56,7 +56,7 @@
                     </div>  
                     <div class="form-group mt-2">
                         <label class="form-label" for="additionalInfo">Additional Information</label>
-                        <textarea class="form-control" id="additionalInfo" name="additionalInfo" rows="1" placeholder="Enter any additional information about the appointment"></textarea>
+                        <textarea class="form-control" id="additionalInfo" name="additionalInfo" rows="1" placeholder="Enter any additional information about the appointment"  maxlength="255"></textarea>
                     </div>
                     <div class="">
                     <button type="submit" class="btn btn-outline-secondary ">Make Appointment</button>
