--- a/html/Login.html
+++ b/html/Login.html
@@ -32,11 +32,11 @@
                     <h1 class="text-center">Login</h1>  
                     <div class="form-group">
                         <div id="username-red" class="row ml-0 mb-2" for="username">Username <span class="ml-1 nodisplay" id="WrongUsername" style=" color:rgb(255, 0, 0)"><b>- Invalid credentials</b></span><span class="ml-1 nodisplay" id="EmptyUsername" style=" color:rgb(255, 0, 0)"><b>- Enter your username</b></span></div>
-                        <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                        <input type="text" class="form-control" id="username" placeholder="Enter your username"  maxlength="20">
                     </div>
                     <div class="form-group">
                         <div id="password-red" class="row ml-0 mb-2" for="password">Password<span class="ml-1 nodisplay" id="WrongPassword" style=" color:rgb(255, 8, 8)"><b>- Incorrect password</b></span><span class="ml-1 nodisplay" id="EmptyPassword" style=" color:rgb(255, 0, 0)"><b>- Enter a password</b></span></div>
-                        <input type="password" class="form-control " id="password" placeholder="Enter your password">
+                        <input type="password" class="form-control " id="password" placeholder="Enter your password"  maxlength="45">
                     </div>
                     <button type="submit" class="btn btn-secondary btn-block">Login</button>
                     <br>
