--- a/html/header.html
+++ b/html/header.html
@@ -101,7 +101,8 @@
                             <a class=" dropdown-item text-white" href="Profile.html">Account Info</a>
                             <a class=" bg-gray dropdown-item text-white " href="Deals.html">Special Deals</a>
                             <a class=" bg-gray dropdown-item text-white " href="Settings.html">Settings</a>
-                            <a id="AdminMenu"class=" bg-gray dropdown-item text-white nodisplay " href="Admin.html">Admin settings</a>
+                            <a id="AdminMenu"class=" bg-gray dropdown-item text-white nodisplay " href="Admin.html">Admin panel</a>
+                            <a id="Statistics"class=" bg-gray dropdown-item text-white nodisplay " href="Statistics.html">Statistics</a>
                             <div class="bg-gray" style="height:20px"><div class=" custom-divider"></div></div>
                             <a class=" bg-gray dropdown-item-logout text-red " style="cursor: pointer;" onclick="LogOut()">Log Out</a>
                         </div>
