--- a/html/Home.html
+++ b/html/Home.html
@@ -148,8 +148,8 @@
                   </div>
               </div>
           </div>
-          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s" id="EstimatorInfo">
-              <div class="service-item rounded overflow-hidden" id="PriceEstimator" >
+          <div class="col-md-6 col-lg-4 wow fadeInUp " data-wow-delay="0.5s" id="EstimatorInfo">
+              <div class="service-item rounded overflow-hidden nodisplay" id="PriceEstimator" >
                 <a class="text-light" href="Estimator.html">
                   <img class="img-fluid ml-4" src="../images/Price_Calculation.webp" alt="">
                   <div class="position-relative p-4 pt-0">
