--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -13,7 +13,7 @@
 
     <!-- Global bootstrap js-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>   
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
@@ -21,26 +21,26 @@
     <div id="customSignUpAlert" class="custom-alert nodisplay">
         <h2>Succesfully Signed up</h2>
     </div>
-    <div class="container mx-80 mt-4">
+    <div class="container mx-80 mt-5">
         <div class="row justify-content-center  text-white">
             <div class="col-md-4 bg-light">
                 <h1 class="text-center">Sign Up</h1>
                 <form id="signupForm" action="/signup" method="post">
                     <div class="form-group">
                       <label class="row ml-0 mb-2" id='name-red' for="name">Name <span class="ml-1 nodisplay" id="EmptyName" style=" color:rgb(255, 0, 0)"><b>- Enter a name</b></label>
-                      <input type="name" class="form-control" placeholder="Enter your name" id="name" name="name" >
+                      <input type="name" class="form-control" placeholder="Enter your name" id="name" name="name"  maxlength="15">
                     </div>
                     <div class="form-group">
                       <div id="email-red" class="row ml-0 mb-2" for="email">Email <span class="ml-1 nodisplay" id="BadEmail" style=" color:rgb(255, 0, 0)"><b>- Enter a valid email</b></span> <span class="ml-1 nodisplay" id="TakenEmail" style=" color:rgb(255, 0, 0)"><b>- Email is taken</b></span><span class="ml-1 nodisplay" id="EmptyEmail" style=" color:rgb(255, 0, 0)"><b>- Enter an email</b></div>
-                      <input type="text" class="form-control" placeholder="Enter your email address" id="email" name="email" >
+                      <input type="text" class="form-control" placeholder="Enter your email address" id="email" name="email" maxlength="45" >
                     </div>
                     <div class="form-group">
                       <div id="username-red" class="row ml-0 mb-2" for="username">Username <span class="ml-1 nodisplay" id="TakenUsername" style=" color:rgb(255, 0, 0)"><b>- Username is taken</b></span><span class="ml-1 nodisplay" id="EmptyUsername" style="color:rgb(255, 0, 0)"><b>- Enter a username</b></span></div>
-                      <input type="text" class="form-control" placeholder="Choose a username" id="username" name="username" >
+                      <input type="text" class="form-control" placeholder="Choose a username" id="username" name="username"  maxlength="20">
                     </div>
                     <div class="form-group">
                       <div id="password-red" class="row ml-0 mb-2" for="password">Password <span class="ml-1 nodisplay" id="BadPassword" style=" color:rgb(255, 0, 0)"><b>- enter a safe password</b></span></div>
-                      <input type="password" class="form-control" placeholder="Enter your desired password" id="password" name="password" >
+                      <input type="password" class="form-control" placeholder="Enter your desired password" id="password" name="password"  maxlength="45">
                     </div>
                     <div class="form-check">
                       <input type="checkbox" class="form-check-input" id="acceptPolicy" required>
