Made the website more mobile friendly in all kinds of ways, checked some amount of blind accesability but seems good TODO perfect blind accesability

--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -86,7 +86,7 @@
 
 <div class="footer">
     <!-- Your footer content goes here -->
-    <div class="container">
+    <div class="container"  style="max-width: 95%;">
         <p>&copy; 2023 Your Website - Additional Information Here</p>
         <p>Contact: velderis@gmail.com</p>
 
