--- a/html/Admin.html
+++ b/html/Admin.html
@@ -24,7 +24,7 @@
     <div id="customAdminPerms" class="custom-alert nodisplay">
         <h2>Succesfully gave administrator permissions</h2>
     </div>
-    <section class="container col-lg-5 mt-5 bg-light text-white" id="admin-view">
+    <section class="container col-lg-5 mt-5 bg-light text-white align-items-center" id="admin-view">
         
         <div class="card-body">
             <h2 class="card-title text-center">Admin panel</h2>
@@ -32,7 +32,7 @@
                 <div class="row-cols-md-3 m-auto">
                     
                 <div class="col mt-2 ">
-                    <h3 class="text-center mb-3 mt-2">Users</h3>
+                    <h3 class="text-center mb-3 mt-2 ">Users</h3>
                     <button class="btn btn-outline-secondary  text-white mt-2" style="width:200px" onclick="findUserByID()">View user by ID</button>
                     <button class="btn btn-outline-secondary  text-white mt-2" style="width:200px" onclick="viewActiveUsers()">View all active users</button>
                     <button class="btn btn-outline-secondary  text-white mt-2" style="width:200px" onclick="viewAllUsers()">View all users</button>
