--- a/html/Home.html
+++ b/html/Home.html
@@ -27,7 +27,7 @@
 <!-- Service Start -->
 <div style="width: 40%" class="container text-white mt-5" >
     <!-- Stylish Business Hours Block -->
-    <div class="bg-light p-4 rounded " style="min-width: 300px ">
+    <div class="bg-light p-4 rounded " style="min-width: 250px ">
         <div class="row">
             <!-- Single header for both sides -->
             <div class="col-md-12">
@@ -61,7 +61,7 @@
     </div>
 
     <!-- Additional Content Section -->
-    <div class="bg-light p-4 mt-5 rounded" style="min-width: 300px ">
+    <div class="bg-light p-4 mt-5 rounded" style="min-width: 250px ">
         <h2 class="text-center ">Online appointment booking</h2>
         <p class="text-center">Logged in users can use our online booking system to choose a repair time that works best for them <span id="LoginP"><a href="Login.html">Log-in</a> to make an appoitment for personalized assistance.</span>
             <span id="BookingP"><a href="Appointment.html">Book an appointment</a></span></p>
@@ -73,7 +73,7 @@
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div id="Services" class=" container-xxl text-white">
   <div class="container bg-light" style="max-width: 80%">
-      <div class="text-center mx-auto mb-4"  style="max-width: 75%; min-width:300;">
+      <div class="text-center mx-auto mb-4"  style="max-width: 75%;">
           <h1>We offer top tier car repairs</h1>
       </div>
       <div class="row g-4 justify-content-end">
@@ -178,7 +178,7 @@
   </div>
 </div>
 
-<main role="main" class="container mt-5 text-light fade-in-hidden">
+<main role="main" class="container mt-5 text-light fade-in-hidden" >
     <!-- Replace the content with your existing sections -->
     <!-- Section 1: Overall Checkup -->
     <section id="Overall_Checkup" >
@@ -270,7 +270,7 @@
     </section>
 </main>
 
-<main role="main" class="container mt-5 text-light fade-in-hidden">
+<main role="main" class="container mt-5 text-light fade-in-hidden" > 
     <!-- Section: Tuning -->
     <section id="Tuning">
         <div class="text-center mt-5 ">
@@ -319,7 +319,7 @@
     </section>
 </main>
 
-    <div class="footer">
+    <div class="footer" style="max-width: 95%;">
         <!-- Your footer content goes here -->
         <div class="container">
             <p>&copy; 2023 Your Website - Additional Information Here</p>
