--- a/html/Profile.html
+++ b/html/Profile.html
@@ -21,13 +21,13 @@
   <div id="customPasswordChangeAlert" class="custom-alert nodisplay">
     <h2>Succesfully changed password!</h2>
   </div>
-    <section class="container col-lg-3 col-md-6 mt-5 text-white bg-light" style="max-width:400px; max-height:350px">
+    <section class="container col-lg-3 col-md-6 mt-5 text-white bg-light" >
         <div id="profile-info" class="mb-4 m-2" >
           <h2 class="mb-3 ">User Profile</h2>
             <p id="name" class="lead">Name: John Doe</p>
             <p id="username" class="lead">Username: johndoe</p>
             <p id="email" class="lead">Email: johndoe@example.com</p>
-            <p class="lead"> Password: ********* <a type="button" class="btn btn-outline-secondary text-white ml-4" onclick="ShowPasswordReset()">Change Password</a></p>
+            <p class="lead"> Password: ********* <a type="button" class="btn btn-outline-secondary text-white " onclick="ShowPasswordReset()">Change Password</a></p>
         </div>
                   <form id="change-password-form" class="nodisplay">
                       <h3>Change your password<br></h1>  
