Updated database fo;es with more data, fixed statistics, should be all for now

--- a/html/Home.html
+++ b/html/Home.html
@@ -64,7 +64,7 @@
     <div class="bg-light p-4 mt-5 rounded" style="min-width: 250px ">
         <h2 class="text-center ">Online appointment booking</h2>
         <p class="text-center">Logged in users can use our online booking system to choose a repair time that works best for them <span id="LoginP"><a href="Login.html">Log-in</a> to make an appoitment for personalized assistance.</span>
-            <span id="BookingP"><a href="Appointment.html">Book an appointment</a></span></p>
+            <span id="BookingP" class="nodisplay"><a href="Appointment.html">Book an appointment</a></span></p>
     </div>
 </div>
 <div id="scrollIndicator">
