--- a/html/header.html
+++ b/html/header.html
@@ -3,13 +3,9 @@
 <head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Add this line to the <head> section of your HTML file -->
     <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.css">
     <!-- Local bootstrap.js-->
     <script src="../bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-    <!-- Vector library for car painting UI-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.3.0/raphael.min.js"></script> 
-        <script src="../bootstrap-5.3.2-dist/js/globals.mjs"></script>
     <!-- Global bootstrap js-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -19,12 +15,12 @@
     <style>
          body {
             
-            background-image: url('../images/main_image2.jpg'); /* Replace with your image path */
+            background-image: url('../images/main_image2.jpg'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             min-height:100vh;
-            height: 300px; /* Set the height to 100% of the viewport height */
+            height: 300px; 
             margin: 0;
             background-color:#000000;
             color: #000000;
@@ -43,7 +39,7 @@
             display: flex;
             justify-content: center;
             align-items: flex-end;
-            height: 100px; /* Set a fixed height or adjust as needed */
+            height: 100px; 
         }
         .dropdown-hover:hover .dropdown-menu {
             display: block;
