--- a/html/Profile.html
+++ b/html/Profile.html
@@ -4,13 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Add this line to the <head> section of your HTML file -->
     <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.css">
     <!-- Local bootstrap.js-->
     <script src="../bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-    <!-- Vector library for car painting UI-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.3.0/raphael.min.js"></script> 
-
     <!-- Global bootstrap js-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -118,7 +114,7 @@
       return
     }
 
-    // Checks if enterred password is sage
+    // Checks if enterred password is safe
     const passwordRegex = /^(?=.*[0-9A-Z!@#$%^&*])(.{5,})$/;
         
     if (!passwordRegex.test(newPassword)) {
@@ -128,7 +124,7 @@
       return
     }
 
-    // Checks if confirmpassword matches newpasword
+    // Checks if confirm password matches newpasword
     if(newPassword!=confirmNewPassword){
       document.getElementById('confirm-new-password-red').style.color='rgb(255,0,0)';
       document.getElementById('confirm-new-password').classList.add('form-control-incorrect');
