--- a/html/Deals.html
+++ b/html/Deals.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container mt-1 ml-0 mx-80" >
-        <div class="alert alert-info" role="alert" >
+        <div tabindex=0 class="alert alert-info" role="alert" >
           You currently have no deals.
         </div>
       </div>
