--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -19,17 +19,17 @@
     <div class="mx-80 mt-5 ml-5">
     <section class=" container my-5 text-white ">
         <div class="row">
-            <div class="col-lg-6 bg-light p-3">
+            <div  tabindex=0 class="col-lg-6 bg-light p-3">
                 <h2>General information</h2>
                 <p>We offer a wide range of car repair and maintenance services to keep your vehicle in top condition. Our expert technicians are here to help you with any car-related issues.</p>
                 <p>We offer all around top prices for the services we offer, in addition if you know what you need, we can give you an estimate on pricing instantly</p>       
         </div>
     </section>
     <!-- Location Section -->
-    <section class=" py-5 text-white">
+    <section  class=" py-5 text-white">
         <div class="container ">
             <div class="row ">
-                <div class="col-md-4 bg-light p-3">
+                <div tabindex=0 class="col-md-4 bg-light p-3">
                     <h2>Visit Our Location</h2>
                     <p>Find us at the following address:</p>
                     <address>
@@ -44,7 +44,7 @@
     </section>
     <br><br><br>
     <section class=" py-5 ">
-        <div class="container text-white bg-light">
+        <div  tabindex=0  class="container text-white bg-light">
             <div class="row">
                 <div class="col-md-6 p-3">
                     <h2>Contact Us</h2>
