--- a/html/Home.html
+++ b/html/Home.html
@@ -20,7 +20,7 @@
 </style>
 <body>
 <div style="width: 40%" class="container text-white mt-5" >
-    <div class="bg-light p-4 rounded " style="min-width: 250px ">
+    <div tabindex=0 class="bg-light p-4 rounded " style="min-width: 250px ">
         <div class="row">
             <div class="col-md-12">
                 <h2 class="text-center">Our Work Hours<br></h2>
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Additional Content Section -->
-    <div class="bg-light p-4 mt-5 rounded" style="min-width: 250px ">
+    <div tabindex=0 class="bg-light p-4 mt-5 rounded" style="min-width: 250px ">
         <h2 class="text-center ">Online appointment booking</h2>
         <p class="text-center">Logged in users can use our online booking system to choose a repair time that works best for them <span id="LoginP"><a href="Login.html">Log-in</a> to make an appoitment for personalized assistance.</span>
             <span id="BookingP" class="nodisplay"><a href="Appointment.html">Book an appointment</a></span></p>
@@ -59,7 +59,7 @@
     <span>↓ Services ↓</span>
   </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div id="Services" class=" container-xxl text-white">
+<div tabindex=0  id="Services" class=" container-xxl text-white">
   <div class="container bg-light" style="max-width: 80%">
       <div class="text-center mx-auto mb-4"  style="max-width: 75%;">
           <h1>We offer top tier car repairs</h1>
@@ -68,7 +68,7 @@
           <div class="col-md-6 col-lg-4 " >
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Overall_Checkup">
-                  <img class="img-fluid ml-4" src="../images/Overall_Checkup.png" alt="Click Me">
+                  <img class="img-fluid ml-4" src="../images/Overall_Checkup.png" alt="Overall checkup image">
                   <div class="position-relative p-4">
                       <div class="service-icon">
                           <i class="fa fa-solar-panel fa-3x"></i>
@@ -83,7 +83,7 @@
           <div class="col-md-6 col-lg-4 " >
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Car_Painting">
-                  <img class="img-fluid ml-4" src="../images/Car_Painting.png" alt="">
+                  <img class="img-fluid ml-4" src="../images/Car_Painting.png" alt="Car painting image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-wind fa-3x"></i>
@@ -97,7 +97,7 @@
           <div class="col-md-6 col-lg-4 ">
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Rust_Removal">
-                  <img class="img-fluid ml-4" src="../images/Rust_Removal.webp" alt="">
+                  <img class="img-fluid ml-4" src="../images/Rust_Removal.webp" alt="Rust Removal image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-lightbulb fa-3x"></i>
@@ -111,7 +111,7 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Tuning">
-                  <img class="img-fluid ml-4" src="../images/Tuning.png" alt="">
+                  <img class="img-fluid ml-4" src="../images/Tuning.png" alt="Tuning image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-solar-panel fa-3x"></i>
@@ -125,7 +125,7 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Custom_Part_Insertion">
-                  <img class="img-fluid ml-4" src="../images/Custom_Part_Insertion.png" alt="">
+                  <img class="img-fluid ml-4" src="../images/Custom_Part_Insertion.png" alt="Custom part insertion image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-wind fa-3x"></i>
@@ -139,7 +139,7 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp " data-wow-delay="0.5s" id="EstimatorInfo">
               <div class="service-item rounded overflow-hidden nodisplay" id="PriceEstimator" >
                 <a class="text-light" href="Estimator.html">
-                  <img class="img-fluid ml-4" src="../images/Price_Calculation.webp" alt="">
+                  <img class="img-fluid ml-4" src="../images/Price_Calculation.webp" alt="Automatic price estimator image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-lightbulb fa-3x"></i>
@@ -151,7 +151,7 @@
               </div>
               <div class="service-item rounded overflow-hidden" id="PriceEstimatorGuest" >
                 <a class="text-light">
-                  <img class="img-fluid ml-4" src="../images/Price_Calculation_Guest.webp" alt="">
+                  <img class="img-fluid ml-4" src="../images/Price_Calculation_Guest.webp" alt="Log in to access this function image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-lightbulb fa-3x"></i>
@@ -166,7 +166,7 @@
   </div>
 </div>
 
-<main role="main" class="container mt-5 text-light fade-in-hidden" >
+<main tabindex=0 role="main" class="container mt-5 text-light fade-in-hidden" >
     <!-- Section 1: Overall Checkup -->
     <section id="Overall_Checkup" >
         <div class="text-center ">
@@ -200,7 +200,7 @@
 </div>
 </div>
 
-<main role="main" class="container mt-5 text-light fade-in-hidden">
+<main tabindex=0 role="main" class="container mt-5 text-light fade-in-hidden">
     <section id="Car_Painting">
         <div class="text-center mt-5 ">
             <h1>Car Painting</h1>
@@ -233,7 +233,8 @@
             </ul>
         </div>
     </section>
-</main><main role="main" class="container mt-5 text-light fade-in-hidden">
+</main>
+<main tabindex=0 role="main" class="container mt-5 text-light fade-in-hidden">
     <!-- Section: Rust Removal -->
     <section id="Rust_Removal">
         <div class="text-center mt-5">
@@ -257,7 +258,7 @@
     </section>
 </main>
 
-<main role="main" class="container mt-5 text-light fade-in-hidden" > 
+<main tabindex=0 role="main" class="container mt-5 text-light fade-in-hidden" > 
     <!-- Section: Tuning -->
     <section id="Tuning">
         <div class="text-center mt-5 ">
@@ -281,7 +282,7 @@
     </section>
 </main>
 
-<main role="main" class="container mt-5 text-light fade-in-hidden">
+<main tabindex=0 role="main" class="container mt-5 text-light fade-in-hidden">
     <!-- Section: Custom Part Insertion -->
     <section id="Custom_Part_Insertion">
         <div class="text-center mt-5">
