--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -23,27 +23,27 @@
                 <h1 class="text-center">Sign Up</h1>
                 <form id="signupForm" action="/signup" method="post">
                     <div class="form-group">
-                      <label class="row ml-0 mb-2" id='name-red' for="name">Name <span class="ml-1 nodisplay" id="EmptyName" style=" color:rgb(255, 0, 0)"><b>- Enter a name</b></label>
-                      <input type="name" class="form-control" placeholder="Enter your name" id="name" name="name"  maxlength="15">
+                        <label class="row ml-0 mb-2" id='name-red' for="name">Name <span class="ml-1 nodisplay" id="EmptyName" style=" color:rgb(255, 0, 0)"><b>- Enter a name</b></label>
+                        <input type="name" class="form-control" placeholder="Enter your name" id="name" name="name"  maxlength="15">
                     </div>
                     <div class="form-group">
-                      <div id="email-red" class="row ml-0 mb-2" for="email">Email <span class="ml-1 nodisplay" id="BadEmail" style=" color:rgb(255, 0, 0)"><b>- Enter a valid email</b></span> <span class="ml-1 nodisplay" id="TakenEmail" style=" color:rgb(255, 0, 0)"><b>- Email is taken</b></span><span class="ml-1 nodisplay" id="EmptyEmail" style=" color:rgb(255, 0, 0)"><b>- Enter an email</b></div>
-                      <input type="text" class="form-control" placeholder="Enter your email address" id="email" name="email" maxlength="45" >
+                        <div id="email-red" class="row ml-0 mb-2" for="email">Email <span class="ml-1 nodisplay" id="BadEmail" style=" color:rgb(255, 0, 0)"><b>- Enter a valid email</b></span> <span class="ml-1 nodisplay" id="TakenEmail" style=" color:rgb(255, 0, 0)"><b>- Email is taken</b></span><span class="ml-1 nodisplay" id="EmptyEmail" style=" color:rgb(255, 0, 0)"><b>- Enter an email</b></div>
+                        <input type="text" class="form-control" placeholder="Enter your email address" id="email" name="email" maxlength="45" >
                     </div>
                     <div class="form-group">
-                      <div id="username-red" class="row ml-0 mb-2" for="username">Username <span class="ml-1 nodisplay" id="TakenUsername" style=" color:rgb(255, 0, 0)"><b>- Username is taken</b></span><span class="ml-1 nodisplay" id="EmptyUsername" style="color:rgb(255, 0, 0)"><b>- Enter a username</b></span></div>
-                      <input type="text" class="form-control" placeholder="Choose a username" id="username" name="username"  maxlength="20">
+                        <div id="username-red" class="row ml-0 mb-2" for="username">Username <span class="ml-1 nodisplay" id="TakenUsername" style=" color:rgb(255, 0, 0)"><b>- Username is taken</b></span><span class="ml-1 nodisplay" id="EmptyUsername" style="color:rgb(255, 0, 0)"><b>- Enter a username</b></span></div>
+                        <input type="text" class="form-control" placeholder="Choose a username" id="username" name="username"  maxlength="20">
                     </div>
                     <div class="form-group">
-                      <div id="password-red" class="row ml-0 mb-2" for="password">Password <span class="ml-1 nodisplay" id="BadPassword" style=" color:rgb(255, 0, 0)"><b>- enter a safe password</b></span></div>
-                      <input type="password" class="form-control" placeholder="Enter your desired password" id="password" name="password"  maxlength="45">
+                        <div id="password-red" class="row ml-0 mb-2" for="password">Password <span class="ml-1 nodisplay" id="BadPassword" style=" color:rgb(255, 0, 0)"><b>- enter a safe password</b></span></div>
+                        <input type="password" class="form-control" placeholder="Enter your desired password" id="password" name="password"  maxlength="45">
                     </div>
                     <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="acceptPolicy" required>
-                      <label class="form-check-label" for="acceptPolicy"> I accept the <a href="#termsConditionsModal" data-bs-toggle="modal">terms and conditions</a></label>
+                        <input type="checkbox" class="form-check-input" id="acceptPolicy" required>
+                        <label class="form-check-label" for="acceptPolicy"> I accept the <a href="#termsConditionsModal" data-bs-toggle="modal" id="termsConditionsLink">terms and conditions</a></label>
                     </div>
-                    <button type="submit" class="btn btn-secondary btn-block mb-3" >Create Account</button>
-                  </form>                  
+                    <button type="submit" class="btn btn-secondary btn-block mb-3">Create Account</button>
+                </form>           
             </div>
         </div>
     </div>
@@ -329,6 +329,26 @@
     });
     document.getElementById('name').addEventListener('focus', function() {
         document.getElementById('name').classList.remove('form-control-incorrect')
+    });
+
+    
+    
+    document.addEventListener("DOMContentLoaded", function () {
+        const acceptPolicyCheckbox = document.getElementById("acceptPolicy");
+        const termsConditionsLink = document.getElementById("termsConditionsLink");
+
+        acceptPolicyCheckbox.addEventListener("keydown", function (event) {
+            if (event.key === "Enter") {
+                this.checked = !this.checked;
+                event.preventDefault(); // Prevent form submission if Enter key is pressed
+            }
+        });
+
+        termsConditionsLink.addEventListener("keydown", function (event) {
+            if (event.key === "Enter") {
+                this.click(); // Simulate a click event on the anchor element
+            }
+        });
     });
 </script>
 
