--- a/html/Home.html
+++ b/html/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.css">
+    <link rel="manifest" href="../bootstrap-5.3.2-dist/js/manifest.json">
     <!-- Local bootstrap.js-->
     <script src="../bootstrap-5.3.2-dist/js/bootstrap.js"></script>
     <!-- Global bootstrap js-->
